k8s/ponos/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ponos-server
  namespace: ponos-server
  annotations:
    prometheus.io/port: '8700'
    prometheus.io/scrape: 'true'
  labels:
    app: ponos-server
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  replicas: 1
  selector:
    matchLabels:
      app: ponos-server
  template:
    metadata:
      labels:
        app: ponos-server
    spec:
      tolerations:
        - effect: NoSchedule
          operator: Equal
          key: blockops
          value: testnet
      containers:
      - name: ponos-server
        image: blockopsnetwork/ponos-server:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
          - name: github-pem
            mountPath: /app/gh.pem
            subPath: gh.pem
        ports:
          - containerPort: 8700
      volumes:
        - name: github-pem
          secret:
            secretName: github-pem-secret
